<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--android:background="@mipmap/bg_main"-->


    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnablePureScrollMode="true">
        <!--纯滚动模式-->
        <!--app:srlEnablePureScrollMode="true"-->
        <!--刷新和加载更多设置-->
        <!--app:srlEnableAutoLoadMore="false"-->
        <!--app:srlEnableLoadMore="true"-->

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/TextTitle_color_21ac90"
                    android:text="@string/data_chongzhi" />

                <View style="@style/LineItemStyleTransparent_10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <com.company.yun.view.widget.SettingBar
                        android:id="@+id/setting_bar_01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_20"
                        android:layout_marginTop="@dimen/padding_20"
                        android:layout_marginRight="@dimen/padding_20"
                        android:background="@drawable/shape_data_chongzih"
                        app:bar_leftColor="@color/white"
                        app:bar_leftText="12.23亿"
                        app:bar_rightColor="@color/white"
                        app:bar_rightText="平台充值数据" />

                    <com.company.yun.view.widget.SettingBar
                        android:id="@+id/setting_bar_02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_20"
                        android:layout_marginTop="@dimen/padding_20"
                        android:layout_marginRight="@dimen/padding_20"
                        android:background="@drawable/shape_data_chongzih"
                        app:bar_leftColor="@color/white"
                        app:bar_leftText="12.23亿"
                        app:bar_rightColor="@color/white"
                        app:bar_rightText="平台充值数据" />

                    <com.company.yun.view.widget.SettingBar
                        android:id="@+id/setting_bar_03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_20"
                        android:layout_marginTop="@dimen/padding_20"
                        android:layout_marginRight="@dimen/padding_20"
                        android:layout_marginBottom="@dimen/padding_20"
                        android:background="@drawable/shape_data_chongzih"
                        app:bar_leftColor="@color/white"
                        app:bar_leftText="12.23亿"
                        app:bar_rightColor="@color/white"
                        app:bar_rightText="平台充值数据" />

                </LinearLayout>

                <View style="@style/LineItemStyleTransparent_10dp" />

                <TextView
                    style="@style/TextTitle_color_21ac90"
                    android:text="@string/data_chongzhi_tubiao" />

                <View style="@style/LineItemStyleTransparent_10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart1"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:layout_marginTop="@dimen/padding_10"
                        android:layout_marginBottom="@dimen/padding_10"
                        android:background="#ffffff" />

                </LinearLayout>

                <!--Top 客户充值数据-->

                <View style="@style/LineItemStyleTransparent_10dp" />

                <TextView
                    style="@style/TextTitle_color_21ac90"
                    android:text="@string/data_Top_kehu_chongzhi_data" />

                <View style="@style/LineItemStyleTransparent_10dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycleview_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </android.support.v7.widget.RecyclerView>


                <View style="@style/LineItemStyleTransparent_10dp" />

                <TextView
                    style="@style/TextTitle_color_21ac90"
                    android:text="@string/data_chongzhi_zhuzhuangtu" />

                <View style="@style/LineItemStyleTransparent_10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/chart02"
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        android:layout_marginTop="@dimen/padding_10"
                        android:layout_marginBottom="@dimen/padding_10"
                        android:background="@color/white" />

                </LinearLayout>

                <View style="@style/LineItemStyleTransparent_10dp" />

                <TextView
                    style="@style/TextTitle_color_21ac90"
                    android:text="@string/data_chongzhi_huanbi" />

                <View style="@style/LineItemStyleTransparent_10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart3"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:layout_marginTop="@dimen/padding_10"
                        android:layout_marginBottom="@dimen/padding_10"

                        android:background="#ffffff" />
                </LinearLayout>


                <View style="@style/LineItemStyleTransparent_10dp" />

                <TextView
                    style="@style/TextTitle_color_21ac90"
                    android:text="@string/data_chongzhi_tongbi" />

                <View style="@style/LineItemStyleTransparent_10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart4"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:layout_marginTop="@dimen/padding_10"
                        android:layout_marginBottom="@dimen/padding_10"
                        android:background="#ffffff" />

                </LinearLayout>


                <!--充值列表-->
                <View style="@style/LineItemStyleTransparent_10dp" />

                <TextView
                    style="@style/TextTitle_color_21ac90"
                    android:text="@string/data_chongzhi_list" />

                <View style="@style/LineItemStyleTransparent_10dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycleview_under"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</RelativeLayout>